--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dist-main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config ./config/webpack.config.electron.js --progress --profile --colors",
     "dist-renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config ./config/webpack.config.prod.js --progress --profile --colors",
     "dist": "npm run dist-main && npm run dist-renderer",
-    "start": "npm run dist && cross-env NODE_ENV=production electron ./main",
+    "start": "cross-env NODE_ENV=production electron ./main",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./main.dev",
     "hot-server": "node -r babel-register server.js",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\"",
