--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "css-loader": "^0.24.0",
     "del": "^2.2.2",
     "devtron": "^1.3.0",
-    "electron": "^1.7.2",
+    "electron": "1.7.9",
     "electron-builder": "^19.19.1",
     "electron-debug": "^1.0.1",
     "electron-devtools-installer": "^2.0.1",
