--- a/package.json
+++ b/package.json
@@ -104,8 +104,11 @@
       "icon": "resources/osx/icon.icns",
       "category": "your.app.category.type"
     },
+    "linux": {
+        "icon": "resources/icons/app.png",
+    },
     "dmg": {
-      "icon": "resources/osx/dmg-icon.icns"
+      "icon": "resources/icons/app.png"
     }
   },
   "dependencies": {
