--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "barterDEX Electron App",
   "main": "main.js",
   "scripts": {
+    "fixperm": "chmod +x ./node_modules/marketmaker/bin/linux/x64/marketmaker && chmod +x ./node_modules/marketmaker/bin/darwin/x64/marketmaker && chmod +x ./node_modules/marketmaker/bin/win32/x64/marketmaker.exe",
     "lint": "eslint app test *.js",
     "dist-main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config ./config/webpack.config.electron.js --progress --profile --colors",
     "dist-renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config ./config/webpack.config.prod.js --progress --profile --colors",
-    "dist": "npm run dist-main && npm run dist-renderer",
+    "dist": "npm run fixperm && npm run dist-main && npm run dist-renderer",
     "start": "npm run dist && cross-env NODE_ENV=production electron ./main",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./main.dev",
     "hot-server": "node -r babel-register server.js",
@@ -103,9 +104,6 @@
     "mac": {
       "icon": "resources/osx/icon.icns",
       "category": "your.app.category.type"
-    },
-    "linux": {
-      "icon": "resources/icons/"
     },
     "dmg": {
       "icon": "resources/icons/icon.png"
