--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   },
   "dependencies": {
     "app-root-dir": "^1.0.2",
+    "appdata-path": "^0.1.2",
     "cross-spawn": "^5.1.0",
     "cryptocoins-icons": "^2.6.0",
     "electron-log": "^2.2.7",
