--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "mobx-react-devtools": "^4.2.5",
     "moment": "^2.18.1",
     "portscanner": "^2.1.1",
+    "qrcode.react": "^0.7.2",
     "react": "^15.4.1",
     "react-cryptocoins": "^1.0.2",
     "react-dom": "^15.3.1",
