--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "mobx-react": "^3.5.5",
     "mobx-react-devtools": "^4.2.5",
     "moment": "^2.18.1",
-    "portscanner": "^2.1.1",
+    "ps-node": "^0.1.6",
     "qrcode.react": "^0.7.2",
     "react": "^15.4.1",
     "react-cryptocoins": "^1.0.2",
