review api and style

--- a/package.json
+++ b/package.json
@@ -129,10 +129,13 @@
     "react-dom": "^15.3.1",
     "react-input-autosize": "^2.0.1",
     "react-router": "^2.7.0",
+    "react-stockcharts": "^0.7.0-beta.19",
     "react-table": "^6.5.3",
     "react-toggle": "^4.0.2",
+    "react-window-size": "^1.0.1",
     "recharts": "^1.0.0-apha.5",
     "request": "^2.81.0",
+    "requestretry": "^1.12.2",
     "rimraf": "^2.6.1",
     "shelljs": "^0.7.8",
     "socket.io-client": "^2.0.3",
