--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "rimraf": "^2.6.1",
     "shelljs": "^0.7.8",
     "socket.io-client": "^2.0.3",
-    "source-map-support": "^0.4.2"
+    "source-map-support": "^0.4.2",
+    "throttled-request": "^0.1.1"
   }
 }
